tests/testcases/net2/errors/BCE0149-external.boo
"""
BCE0149-external.boo(6,6): BCE0149: The type 'string' must derive from 'System.EventArgs' in order to substitute the generic parameter 'TEventArgs' in 'System.EventHandler[of TEventArgs]'.
"""
import System

a as EventHandler of string = null
